--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,12 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+    /* background-color: rgb(213, 164, 164); */
 }
-body{
+.xyzd{
     font-family: sans-serif;
-    background-color: white;
+    /* background-color: aquamarine; */
+   
 
 
 }
@@ -30,7 +32,12 @@ wrapper{
     padding: 10px;
     background-color: transparent;
     transition: 0.3s ease-in-out;
+    /* background-color: aqua; */
+   
 
+}
+.navbar{
+    /* background-color: aqua; */
 }
 .header-section .navbar-toggler,
 .header-section .navbar-toggler:focus{
