--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,17 @@ wrapper{
     color: crimson;
 }
 
+/* ABOUT  */
+
+.about-section{
+    background-color: #f0f0f0;
+    margin: 50px 0;
+    padding: 50px;
+}
+
+.about-section .about h1{
+    border-bottom: 2px solid green;
+    /* width: 200px; */
+    font-weight: bold;
+
+}
